[package]
name = "raymarching"
version = "0.1.0"
authors = ["Edward <garmonedward@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.40"
wasm-bindgen = "0.2.63"
lazy_static = "1.3.0"

wasm-bindgen-futures = "0.4.13"
futures-channel-preview = "0.3.0-alpha.18"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'ErrorEvent',
  'DedicatedWorkerGlobalScope',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  'Performance',
  'KeyboardEvent',
  'MouseEvent'
]